# hw2influxdb

./: Dockerfile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
src/hw2influxdb/: hw2influxdb.py
