[project]
name = "hw2influxdb"
version = "0.0.1"
authors = ["Heikki Partanen <heikki.partanen@gmail.com>"]
description = "Service for collecting data from HomeWizard P1 meter local API and delivering it to InfluxDB"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[project.scripts]
mcchecker = "hw2influxdb.hw2influxdb:run"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
